# amm-challenge

./: .gitignore  APPROACH.md  CLAUDE.md  Makefile  README.md  pyproject.toml
amm_competition/: cli.py
amm_competition/competition/: __init__.py  config.py  elo.py  match.py  scoring.py
amm_competition/core/: amm.py  interfaces.py  trade.py
amm_competition/evm/: adapter.py  baseline.py  compiler.py  executor.py  validator.py
amm_competition/market/: arbitrageur.py  price_process.py
amm_sim_rs/benches/: simulation_bench.rs
amm_sim_rs/src/amm/: cfmm.rs
amm_sim_rs/src/evm/: strategy.rs
amm_sim_rs/src/market/: arbitrageur.rs  price_process.rs
amm_sim_rs/src/simulation/: engine.rs
amm_sim_rs/src/types/: result.rs  wad.rs  (+1 more)
contracts/src/: IAMMStrategy.sol  SimpleStrategy.sol  VanillaStrategy.sol
contracts/test/: Strategy.t.sol
scripts/: paired_eval.py  sweep_asymmetric.py  sweep_static_fees.py
strategies/: README.md  _best_asym.sol  _fine_77.sol  _fine_78.sol  _fine_79.sol  _fine_81.sol  _fine_82.sol  _fine_83.sol  _sweep_75.sol  _sweep_78.sol  _sweep_80.sol  _sweep_82.sol  _sweep_85.sol  _sweep_88.sol  _sweep_90.sol  _test_asym.sol  asymmetric_v3a.sol  asymmetric_v3b.sol  combined_v4c.sol  dir_adjust_v5.sol  directional_v2b.sol  escalating_v3c.sol  ewma_vol_v2c.sol  impact_reactive_v1.sol  inventory_linear_v4b.sol  reverse_asym_v4a.sol  static_asym.sol  static_fee.sol  timestamp_two_tier_v2a.sol  timestamp_v3d.sol  vol_regime_dir_v5.sol  vol_responsive_v5.sol
tests/: conftest.py  test_amm.py  test_baseline.py  test_competition.py  test_market.py
(+1 files in other folders)
